adding matchers helper for chefspec
some fixes for chefspec/kitchen also.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,4 +12,4 @@ suites:
   - name: default
     run_list:
       - recipe[firewall::default]
-      - recipe[firewall-test::default]
+      - recipe[fake::default]
