--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,12 @@ before_install:
 - echo -n $GCE_PUBKEY_CHUNK_{0..30} >> ~/.ssh/id_gce_pubkey.base64
 - cat ~/.ssh/id_gce_pubkey.base64 | tr -d ' ' | base64 --decode > ~/.ssh/id_gce.pub
 script:
-#- bundle exec rake style
-#- bundle exec rake spec
-- bundle exec kitchen test $KITCHEN_INSTANCE
-after_script:
-- bundle exec kitchen destroy $KITCHEN_INSTANCE
+- bundle install --without kitchen_windows
+- bundle exec rake style
+- bundle exec rake spec
+# - bundle exec kitchen test $KITCHEN_INSTANCE
+# after_script:
+# - bundle exec kitchen destroy $KITCHEN_INSTANCE
 env:
   global:
   - secure: R1jxTrZPqnwa0eOVzFzf0FrvwZxe88F5q33ScQe9s0IHY+bESvaw1MsLyDVf8UcomPtLyp2Moup4LqduivoY58A4bk2+0lATElWW4qbluCh12TSEgvX8N/YsPbO9KDPbMwEyNikiiKv+VuxfghagtG7MAAAvgQG+u2E2fu8VAfY=
@@ -178,7 +179,8 @@ env:
   - secure: buJZKgvprJML48SbD3k8MJjpcNZuEvqrZE6bxbJEJlELF8du8wx2aRlFgveCwIDJXGnu6Cqmsah14aXnpwxiNR0YDrl1pbYacI4mZjHVIVyjPIpItsVC95jflfW7cTwIa/WIettW/L2HYs3aEIeY3kWyyBnisjkj2tTGAEmZ7H0=
   - secure: DqtGl5NoRn2A9Fp7ucMhxraBDmVmlwQNtqM9gEoCOXHNa+aUNJ1C35uCP7D75Nj7x/0AyxdNP31dmX4pv9CgfNWveN9qtBki+vqxnXT3QyLUwbRb/2YdlhvCipxyPATpb7JuG5jO21NR6xg6cI4H6j53uNxiRtBRFIfsFApfLf4=
   matrix:
-  - KITCHEN_INSTANCE='default-debian-70'
-  - KITCHEN_INSTANCE='default-ubuntu-1004'
-  - KITCHEN_INSTANCE='default-ubuntu-1204'
-  - KITCHEN_INSTANCE='default-ubuntu-1310'
+  - KITCHEN_INSTANCE='default-ubuntu-1404'
+  - KITCHEN_INSTANCE='default-debian-78'
+  - KITCHEN_INSTANCE='default-centos-66'
+  - KITCHEN_INSTANCE='default-centos-70'
+  - KITCHEN_INSTANCE='iptables-ubuntu-1404'
