--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,13 +27,9 @@ platforms:
     run_list:
       - recipe[apt::default]
   - name: windows-2012r2
-    driver_config:
-      box: windows2012r2
 
 suites:
   - name: default
-    excludes:
-      - windows-2012r2
     run_list:
       - recipe[firewall::default]
       - recipe[firewall-test::default]
@@ -51,7 +47,9 @@ suites:
       firewall:
         ubuntu_iptables: true
         redhat7_iptables: true
-  - name: windows
+
+  # windows without default rules test
+  - name: windows-no_rules
     excludes:
       - centos-5.11
       - centos-6.7
@@ -62,7 +60,7 @@ suites:
       - ubuntu-14.04
     run_list:
       - recipe[firewall::default]
-      - recipe[firewall-test::windows]
+      - recipe[firewall-test::windows_no_rules]
     attributes:
       firewall:
         windows:
