fix testing rules suite name
Signed-off-by: Corey Hemminger <hemminger@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           - firewalld
           - iptables
           - ufw
-          - disable_firewall
+          - disable-firewall
         exclude:
           - os: amazonlinux-2
             suite: ufw
