--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -2,7 +2,7 @@
 driver:
   name: dokken
   privileged: true  # because Docker and SystemD/Upstart
-  chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
+  chef_version: <%= ENV['CHEF_VERSION'] || 'stable' %>
 
 transport:
   name: dokken
@@ -14,10 +14,10 @@ verifier:
   name: inspec
 
 platforms:
-  - name: almalinux-8
-    driver:
-      image: dokken/almalinux-8
-      pid_one_command: /usr/lib/systemd/systemd
+#  - name: almalinux-8
+#    driver:
+#      image: dokken/almalinux-8
+#      pid_one_command: /usr/lib/systemd/systemd
   - name: amazonlinux-2
     driver:
       image: dokken/amazonlinux-2
@@ -42,10 +42,10 @@ platforms:
     driver:
       image: dokken/centos-8
       pid_one_command: /usr/lib/systemd/systemd
-  - name: fedora-latest
-    driver:
-      image: dokken/fedora-latest
-      pid_one_command: /usr/lib/systemd/systemd
+#  - name: fedora-latest
+#    driver:
+#      image: dokken/fedora-latest
+#      pid_one_command: /usr/lib/systemd/systemd
   - name: ubuntu-18.04
     driver:
       image: dokken/ubuntu-18.04
@@ -58,7 +58,7 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-  - name: opensuse-leap-15
-    driver:
-      image: dokken/opensuse-leap-15
-      pid_one_command: /bin/systemd
+#  - name: opensuse-leap-15
+#    driver:
+#      image: dokken/opensuse-leap-15
+#      pid_one_command: /bin/systemd
