--- a/kitchen.yml
+++ b/kitchen.yml
@@ -76,6 +76,10 @@ suites:
 
   - name: iptables
     excludes:
+      - debian-9
+      - debian-10
+      - ubuntu-18.04
+      - ubuntu-20.04
       - windows-2016
       - windows-2019
     run_list:
