--- a/kitchen.yml
+++ b/kitchen.yml
@@ -12,7 +12,7 @@ provisioner:
       allow_mosh: true
       allow_loopback: true
       allow_icmp: true
-      ipv6_enabled: false
+      #ipv6_enabled: false
       firewalld:
         permanent: true
 
@@ -109,6 +109,6 @@ suites:
       - recipe[firewall::default]
       - recipe[firewall-test::default]
 
-  - name: disable-firewall
-    run_list:
-      - recipe[firewall::disable_firewall]
+#  - name: disable-firewall
+#    run_list:
+#      - recipe[firewall::disable_firewall]
