--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 #        uses: actionshub/markdownlint@main
 
   dokken:
-    needs: [mdl, yamllint, delivery]
+#    needs: [mdl, yamllint, delivery]
     runs-on: macos-latest
     strategy:
       matrix:
