--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,19 +83,13 @@ jobs:
         uses: actionshub/chef-install@main
       - name: Test
         run: |
-          brew -v
-          brew install docker virtualbox
-          brew install docker-machine
-          docker-machine create --driver virtualbox defualt
-          docker-machine restart
-          eval "$(docker-machine env default)"
-          docker -v
-          docker info
+          vagrant -v
+          brew install vagrant
       - name: Dokken
         uses: actionshub/test-kitchen@main
         env:
           CHEF_LICENSE: accept-no-persist
-          KITCHEN_LOCAL_YAML: kitchen.dokken.yml
+          #KITCHEN_LOCAL_YAML: kitchen.dokken.yml
         with:
           suite: ${{ matrix.suite }}
           os: ${{ matrix.os }}
