--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
   dokken:
 #    needs: [mdl, yamllint, delivery]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         os:
@@ -84,7 +84,7 @@ jobs:
       - name: Test
         run: |
           vagrant -v
-          brew install vagrant
+          VirtualBoxVM --help
       - name: Dokken
         uses: actionshub/test-kitchen@main
         env:
