--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,91 +7,111 @@ name: ci
     branches: [main, master]
 
 jobs:
-#  delivery:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#      - name: Run Chef Delivery
-#        uses: actionshub/chef-delivery@main
-#        env:
-#          CHEF_LICENSE: accept-no-persist
-#
-#  yamllint:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#      - name: Run yaml Lint
-#        uses: actionshub/yamllint@main
-#
-#  mdl:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#      - name: Run Markdown Lint
-#        uses: actionshub/markdownlint@main
-
-  dokken:
-#    needs: [mdl, yamllint, delivery]
+  delivery:
     runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run Chef Delivery
+        uses: actionshub/chef-delivery@main
+        env:
+          CHEF_LICENSE: accept-no-persist
+
+  yamllint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run yaml Lint
+        uses: actionshub/yamllint@main
+
+  mdl:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run Markdown Lint
+        uses: actionshub/markdownlint@main
+
+  test-kitchen:
+    needs: [mdl, yamllint, delivery]
+    runs-on: mocos-latest
     strategy:
       matrix:
         os:
-#          - amazonlinux-2
-#          - debian-9
-#          - debian-10
-#          - centos-7
-#          - centos-8
-#          - ubuntu-1804
+          - amazonlinux-2
+          - debian-9
+          - debian-10
+          - centos-7
+          - centos-8
+          - ubuntu-1804
           - ubuntu-2004
+          - windows-2016
+          - windows-2019
         suite:
-#          - firewalld
-#          - iptables
+          - default
+          - firewalld
+          - iptables
           - ufw
-#        exclude:
-#          - os: amazonlinux-2
-#            suite: ufw
-#          - os: debian-9
-#            suite: firewalld
-#          - os: debian-9
-#            suite: iptables
-#          - os: debian-10
-#            suite: firewalld
-#          - os: debian-10
-#            suite: iptables
-#          - os: centos-7
-#            suite: ufw
-#          - os: centos-8
-#            suite: ufw
-#          - os: centos-8
-#            suite: firewalld
-#          - os: ubuntu-1804
-#            suite: firewalld
-#          - os: ubuntu-1804
-#            suite: iptables
-#          - os: ubuntu-2004
-#            suite: firewalld
-#          - os: ubuntu-2004
-#            suite: iptables
+          - windows
+        exclude:
+          - os: amazonlinux-2
+            suite: ufw
+          - os: amazonlinux-2
+            suite: windows
+          - os: debian-9
+            suite: firewalld
+          - os: debian-9
+            suite: iptables
+          - os: debian-9
+            suite: windows
+          - os: debian-10
+            suite: firewalld
+          - os: debian-10
+            suite: iptables
+          - os: debian-10
+            suite: windows
+          - os: centos-7
+            suite: ufw
+          - os: centos-7
+            suite: windows
+          - os: centos-8
+            suite: ufw
+          - os: centos-8
+            suite: firewalld
+          - os: centos-8
+            suite: windows
+          - os: ubuntu-1804
+            suite: firewalld
+          - os: ubuntu-1804
+            suite: iptables
+          - os: ubuntu-1804
+            suite: windows
+          - os: ubuntu-2004
+            suite: firewalld
+          - os: ubuntu-2004
+            suite: iptables
+          - os: ubuntu-2004
+            suite: windows
+          - os: windows-2016
+            suite: firewalld
+          - os: windows-2016
+            suite: iptables
+          - os: windows-2016
+            suite: ufw
+          - os: windows-2019
+            suite: firewalld
+          - os: windows-2019
+            suite: iptables
+          - os: windows-2019
+            suite: ufw
       fail-fast: false
     steps:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Chef
         uses: actionshub/chef-install@main
-      - name: Test
-        run: |
-          sudo curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-          sudo curl -fsSL https://www.virtualbox.org/download/oracle_vbox_2016.asc | sudo apt-key add -
-          sudo curl -fsSL https://www.virtualbox.org/download/oracle_vbox.asc | sudo apt-key add -
-          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-          sudo apt-add-repository "deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib"
-          sudo apt-get update && sudo apt-get install vagrant virtualbox
-          vagrant -v
-          VirtualBoxVM --help
-      - name: Dokken
+      - name: kitchen
         uses: actionshub/test-kitchen@main
         env:
           CHEF_LICENSE: accept-no-persist
