MR change requests
Signed-off-by: Corey Hemminger <hemminger@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
----
 name: ci
 
 'on':
@@ -89,34 +88,8 @@ jobs:
           suite: ${{ matrix.suite }}
           os: ${{ matrix.os }}
 
-#  windows-latest:
-#    needs: [mdl, yamllint, delivery]
-#    runs-on: windows-latest
-#    strategy:
-#      matrix:
-#        os:
-#          - "windows-latest"
-#        suite:
-#          - "windows"
-#      fail-fast: false
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v2
-#      - name: Install Chef
-#        uses: actionshub/chef-install@main
-#        env:
-#          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-#      - name: test-kitchen
-#        uses: actionshub/test-kitchen@main
-#        env:
-#          CHEF_LICENSE: accept-no-persist
-#          KITCHEN_LOCAL_YAML: kitchen.windows.yml
-#        with:
-#          suite: ${{ matrix.suite }}
-#          os: ${{ matrix.os }}
-
   final:
-    needs: test-kitchen #[test-kitchen, windows-latest]
+    needs: test-kitchen
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
