--- a/kitchen.yml
+++ b/kitchen.yml
@@ -4,6 +4,7 @@ driver:
 provisioner:
   name: chef_infra
   product_name: chef
+  product_version: <%= ENV['CHEF_VERSION'] || 'current' %>
   deprecations_as_errors: true
   chef_license: accept-no-persist
   attributes:
