--- a/kitchen.yml
+++ b/kitchen.yml
@@ -92,6 +92,28 @@ suites:
         ubuntu_iptables: true
         redhat7_iptables: true
 
+  - name: nftables
+    excludes:
+      - almalinux-8
+      - amazonlinux-2
+      - centos-7
+      - centos-8
+      - debian-9
+      - freebsd-11
+      - freebsd-12
+      - fedora-latest
+      - opensuse-leap-15
+      - ubuntu-18.04
+      - ubuntu-20.04
+      - windows-2016
+      - windows-2019
+    run_list:
+      - recipe[firewall::default]
+      - recipe[firewall-test::default]
+    attributes:
+      firewall:
+        debian_nftables: true
+
   - name: windows
     excludes:
       - almalinux-8
