--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -36,9 +36,9 @@ platforms:
     driver:
       image: dokken/centos-7
       pid_one_command: /usr/lib/systemd/systemd
-  - name: centos-8
+  - name: centos-stream-8
     driver:
-      image: dokken/centos-8
+      image: dokken/centos-stream-8
       pid_one_command: /usr/lib/systemd/systemd
   - name: fedora-latest
     driver:
