--- a/kitchen.yml
+++ b/kitchen.yml
@@ -24,7 +24,7 @@ platforms:
   - name: almalinux-8
   - name: amazonlinux-2
   - name: centos-7
-  - name: centos-8
+  - name: centos-stream-8
   - name: debian-9
   - name: debian-10
   - name: freebsd-11
