Use reusable workflows instead of Chef Delivery (#248)
* Use reusable workflows instead of Chef Delivery

* Switch centos-8 for centos-stream-8

Signed-off-by: Dan Webb <dan.webb@damacus.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,37 +3,20 @@ name: ci
 'on':
   pull_request:
   push:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
-  delivery:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Run Chef Delivery
-        uses: actionshub/chef-delivery@main
-        env:
-          CHEF_LICENSE: accept-no-persist
-
-  yamllint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Run yaml Lint
-        uses: actionshub/yamllint@main
-
-  mdl:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Run Markdown Lint
-        uses: actionshub/markdownlint@main
+  lint-unit:
+    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@0.0.3
+    permissions:
+      actions: write
+      checks: write
+      pull-requests: write
+      statuses: write
+      issues: write
 
   integration:
-    needs: [mdl, yamllint, delivery]
+    needs: lint-unit
     runs-on: macos-10.15
     strategy:
       matrix:
@@ -42,7 +25,7 @@ jobs:
           - debian-9
           - debian-10
           - centos-7
-          - centos-8
+          - centos-stream-8
           - ubuntu-1804
           - ubuntu-2004
         suite:
@@ -62,9 +45,9 @@ jobs:
             suite: iptables
           - os: centos-7
             suite: ufw
-          - os: centos-8
+          - os: centos-stream-8
             suite: ufw
-          - os: centos-8
+          - os: centos-stream-8
             suite: firewalld
           - os: ubuntu-1804
             suite: firewalld
