--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           - amazonlinux-2
           - debian-9
           - debian-10
+          - debian-11
           - centos-7
           - centos-stream-8
           - ubuntu-1804
@@ -31,21 +32,32 @@ jobs:
         suite:
           - firewalld
           - iptables
+          - nftables
           - ufw
         exclude:
+          - os: amazonlinux-2
+            suite: nftables
           - os: amazonlinux-2
             suite: ufw
           - os: debian-9
             suite: firewalld
           - os: debian-9
+            suite: nftables
+          - os: debian-9
             suite: iptables
           - os: debian-10
             suite: firewalld
           - os: debian-10
             suite: iptables
+          - os: debian-10
+            suite: nftables
+          - os: centos-7
+            suite: nftables
           - os: centos-7
             suite: ufw
           - os: centos-stream-8
+            suite: nftables
+          - os: centos-stream-8
             suite: ufw
           - os: centos-stream-8
             suite: firewalld
@@ -53,10 +65,14 @@ jobs:
             suite: firewalld
           - os: ubuntu-1804
             suite: iptables
+          - os: ubuntu-1804
+            suite: nftables
           - os: ubuntu-2004
             suite: firewalld
           - os: ubuntu-2004
             suite: iptables
+          - os: ubuntu-2004
+            suite: nftables
       fail-fast: false
     steps:
       - name: Check out code
