[GH-241] Add support for nftables. (#242)
* [GH-241] Add support for nftables.

* add a provider and helpers for nftables
* minor fixes to libraries/helpers to support nftables
* test nftables on debian-10
* Add documentation of nftables support to README.md
* Remove redundant regex
* Use strings instead of symbols
* Shorten kitchen.yml
* Use new custom resource pattern
* Remove superfluous enabled/disabled properties
* Use the resource-driven design for nftable
* Add documentation for nftables resource
* Add documentation for firewall_rule
* cookstyle, requested changes
* Support multiple actions in one rule
* Do not specify defaults in the test recipe
* Add GitHub action for nftables and exclude all platforms except debian-11
* Do not do additional tests for the old resources in this PR
* Exclude all firewalls except nftables from testing for debian-11

Signed-off-by: Matthias Pausch <m.pausch@gsi.de>
Co-authored-by: Dan Webb <dan.webb@damacus.io>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -27,6 +27,7 @@ platforms:
   - name: centos-stream-8
   - name: debian-9
   - name: debian-10
+  - name: debian-11
   - name: freebsd-11
   - name: freebsd-12
   - name: fedora-latest
@@ -91,6 +92,12 @@ suites:
       firewall:
         ubuntu_iptables: true
         redhat7_iptables: true
+
+  - name: nftables
+    includes:
+      - debian-11
+    run_list:
+      - recipe[nftables-test]
 
   - name: windows
     excludes:
