--- a/kitchen.yml
+++ b/kitchen.yml
@@ -99,6 +99,12 @@ suites:
     run_list:
       - recipe[nftables-test]
 
+  - name: firewalldnew
+    includes:
+      - debian-11
+    run_list:
+      - recipe[firewalld-test]
+
   - name: windows
     excludes:
       - almalinux-8
