Upgrade debian-11 before installing firewalld
Signed-off-by: Matthias Pausch <m.pausch@gsi.de>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -28,7 +28,11 @@ platforms:
   - name: debian-9
   - name: debian-10
   - name: debian-11
-  - name: fedora35
+    driver_config:
+      vagrantfiles:
+        - test/apt_update_upgrade.rb
+
+  - name: fedora-34
   - name: freebsd-11
   - name: freebsd-12
   - name: fedora-latest
