--- a/kitchen.yml
+++ b/kitchen.yml
@@ -29,9 +29,9 @@ platforms:
   - name: debian-10
   - name: debian-11
   - name: fedora-34
+  - name: fedora-latest
   - name: freebsd-11
   - name: freebsd-12
-  - name: fedora-latest
   - name: opensuse-leap-15
   - name: ubuntu-18.04
   - name: ubuntu-20.04
@@ -68,9 +68,9 @@ suites:
       - amazonlinux-2
       - centos-7
       - centos-8
+      - fedora-latest
       - freebsd-11
       - freebsd-12
-      - fedora-latest
       - opensuse-leap-15
       - windows-2016
       - windows-2019
@@ -108,21 +108,9 @@ suites:
       - recipe[firewalld-test]
 
   - name: windows
-    excludes:
-      - almalinux-8
-      - amazonlinux-2
-      - debian-9
-      - debian-10
-      - debian-11
-      - centos-7
-      - centos-8
-      - fedora-34
-      - fedora-latest
-      - freebsd-11
-      - freebsd-12
-      - opensuse-leap-15
-      - ubuntu-18.04
-      - ubuntu-20.04
+    includes:
+      - windows-2016
+      - windows-2019
     run_list:
       - recipe[firewall::default]
       - recipe[firewall-test::default]
