Rename testsuite firewalldnew to firewalld-dbus
Signed-off-by: Matthias Pausch <m.pausch@gsi.de>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           - os: debian-10
             suite: ufw
           - os: debian-11
-            suite: firewalldnew
+            suite: firewalld-dbus
           - os: debian-11
             suite: nftables
           - os: ubuntu-1804
