--- a/kitchen.yml
+++ b/kitchen.yml
@@ -28,9 +28,10 @@ platforms:
   - name: debian-9
   - name: debian-10
   - name: debian-11
+  - name: fedora-34
+  - name: fedora-latest
   - name: freebsd-11
   - name: freebsd-12
-  - name: fedora-latest
   - name: opensuse-leap-15
   - name: ubuntu-18.04
   - name: ubuntu-20.04
@@ -67,9 +68,9 @@ suites:
       - amazonlinux-2
       - centos-7
       - centos-8
+      - fedora-latest
       - freebsd-11
       - freebsd-12
-      - fedora-latest
       - opensuse-leap-15
       - windows-2016
       - windows-2019
@@ -99,20 +100,17 @@ suites:
     run_list:
       - recipe[nftables-test]
 
+  - name: firewalld-dbus
+    includes:
+      - debian-11
+      - fedora-34
+    run_list:
+      - recipe[firewalld-test]
+
   - name: windows
-    excludes:
-      - almalinux-8
-      - amazonlinux-2
-      - debian-9
-      - debian-10
-      - centos-7
-      - centos-8
-      - freebsd-11
-      - freebsd-12
-      - fedora-latest
-      - opensuse-leap-15
-      - ubuntu-18.04
-      - ubuntu-20.04
+    includes:
+      - windows-2016
+      - windows-2019
     run_list:
       - recipe[firewall::default]
       - recipe[firewall-test::default]
