--- a/kitchen.yml
+++ b/kitchen.yml
@@ -33,6 +33,7 @@ platforms:
   - name: freebsd-11
   - name: freebsd-12
   - name: opensuse-leap-15
+  - name: oracle-8
   - name: ubuntu-18.04
   - name: ubuntu-20.04
   - name: windows-2016
@@ -54,6 +55,7 @@ suites:
       - centos-8
       - debian-9
       - debian-10
+      - oracle-8
       - ubuntu-18.04
       - ubuntu-20.04
       - windows-2016
@@ -72,6 +74,7 @@ suites:
       - freebsd-11
       - freebsd-12
       - opensuse-leap-15
+      - oracle-8
       - windows-2016
       - windows-2019
     run_list:
@@ -82,6 +85,7 @@ suites:
     excludes:
       - debian-9
       - debian-10
+      - oracle-8
       - ubuntu-18.04
       - ubuntu-20.04
       - windows-2016
@@ -97,6 +101,7 @@ suites:
   - name: nftables
     includes:
       - debian-11
+      - oracle-8
     run_list:
       - recipe[nftables-test]
 
