--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
   integration:
     needs: lint-unit
-    runs-on: macos-13
+    runs-on: macos-latest-xl
     strategy:
       matrix:
         include:
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install VirtualBox
         run: |
-          brew install virtualbox
+          brew update virtualbox
       - name: Install Chef
         uses: actionshub/chef-install@2.0.4
       - name: kitchen
