--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install VirtualBox
         run: |
-          brew update virtualbox
+          brew upgrade virtualbox
       - name: Install Chef
         uses: actionshub/chef-install@2.0.4
       - name: kitchen
