--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install VirtualBox
         run: |
+          brew update
           brew upgrade virtualbox
       - name: Install Chef
         uses: actionshub/chef-install@2.0.4
