Try an older MacOS machine (#292)
* Try an older MacOS machine

Signed-off-by: Dan Webb <dan.webb@damacus.io>

* Install VirtualBox

Signed-off-by: Dan Webb <dan.webb@damacus.io>

* Try something else?

Signed-off-by: Dan Webb <dan.webb@damacus.io>

* SQUASHME

Signed-off-by: Dan Webb <dan.webb@damacus.io>

* SQUASHME

---------

Signed-off-by: Dan Webb <dan.webb@damacus.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
   integration:
     needs: lint-unit
-    runs-on: macos-13
+    runs-on: macos-latest-xl
     strategy:
       matrix:
         include:
@@ -45,8 +45,12 @@ jobs:
             suite: ufw
       fail-fast: false
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4 # v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install VirtualBox
+        run: |
+          brew update
+          brew upgrade virtualbox
       - name: Install Chef
         uses: actionshub/chef-install@2.0.4
       - name: kitchen
