Stop Using XL runner
Signed-off-by: Dan Webb <dan.webb@damacus.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
   integration:
     needs: lint-unit
-    runs-on: macos-latest-xl
+    runs-on: macos-latest
     strategy:
       matrix:
         include:
