--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
       - name: Install VirtualBox
         run: |
           brew update
-          brew upgrade virtualbox
+          brew install virtualbox vagrant
+          brew upgrade
       - name: Install Chef
         uses: actionshub/chef-install@3.0.1
       - name: kitchen
